# ceto

./: .gitattributes  README.md  codegen.py  compiler.py  parser.py  preprocessor.py  pyproject.toml  pythonfrontend.py  requirements.txt  runtests.py  semanticanalysis.py  setup.py
ceto/: __main__.py  abstractsyntaxtree.py  codegen.py  compiler.py  indent_checker.py  indentchecker.py  install_standard_library_macros.ctp  parser.py  preprocessor.py  pythonfrontend.py  scope.py  semanticanalysis.py
include/: append_to_pushback.cth  boundscheck.cth  ceto.h  ceto_checked_array_access.cth  ceto_checked_array_access.donotedit.autogenerated.h  ceto_private_append_to_pushback.donotedit.autogenerated.h  ceto_private_append_to_pushback.donotedit.h  ceto_private_boundscheck.donotedit.autogenerated.h  ceto_private_boundscheck.donotedit.h  ceto_private_convenience.donotedit.autogenerated.h  ceto_private_convenience.donotedit.h  ceto_private_listcomp.donotedit.h  convenience.cth  listcomp.cth  non_null_propagate_const.h  not_null.h  propagate_const_copyable.h  python_syntax_compatibility.cth
selfhost/: abstractsyntaxtree.ceto  ast.cpp  ast.cth  ast.ctp  ast.donotedit..cpp  ast.donotedit.autogenerated.cpp  ast.donotedit.autogenerated.h  ast.donotedit.cpp  ast.donotedit.h  ast.h  evalable_repr.cth  evalable_repr.donotedit.autogenerated.h  evalable_repr.donotedit.h  grammar.cpp-peglib  macro_definition_visitor.cth  macro_definition_visitor.donotedit.autogenerated.h  macro_expansion.cth  macro_expansion.donotedit.autogenerated.h  macro_expansion.donotedit.h  macro_matcher.cth  scope.cth  (+22 more)
(+575 files in other folders)
