[build-system]
requires = [
    "setuptools>=42",
    "pybind11>=2.10.0",
    "pyparsing",
]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
#test-command = "pytest {project}/tests/test_compiler.py"
test-command = "pytest {project}"
#test-skip = "*universal2:arm64"

[tool.ruff]
extend-select = [
  "B",   # flake8-bugbear
  "I",   # isort
  "PGH", # pygrep-hooks
  "RUF", # Ruff-specific
  "UP",  # pyupgrade
]
extend-ignore = [
  "E501",   # Line too long
]
target-version = "py38"
